--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="activity_main_about_program">О программе</string>
     <string name="activity_main_learn_characters">Изучение букв</string>
     <string name="activity_main_test">Тест</string>
+    <string name="button">button</string>
 </resources>
